tests/snapshots/single__fail__const_no_value.snap
---
source: tests/fail.rs
expression: result.unwrap_err()
---
Error: soppo::parse

  × Syntax error: Constant 'x' requires an initialiser (use `const x int =
  │ <value>`)
   ╭─[const_no_value.sop:4:13]
 3 │ func main() {
 4 │     const x int
   ·             ─┬─
   ·              ╰── unexpected token
 5 │ }
   ╰────
