tests/snapshots/single__fail__const_type_assign.snap
---
source: tests/single.rs
expression: result.unwrap_err()
---
Error: soppo::assign_to_const_field

  × Cannot assign to const field `Host`
    ╭─[const_type_assign.sop:9:5]
  8 │     c := Config{Host: "localhost"}
  9 │     c.Host = "other"  // ERROR: cannot assign to const field
    ·     ───┬──
    ·        ╰── cannot assign to const field
 10 │ }
    ╰────
  help: const fields cannot be reassigned after struct creation
