tests/snapshots/single__fail__duration_string_mul.snap
---
source: tests/single.rs
expression: result.unwrap_err()
---
Error: soppo::type_mismatch

  × Mismatched types
   ╭─[duration_string_mul.sop:8:29]
 7 │     // Duration * string should fail - string is not compatible with int64
 8 │     d := time.Millisecond * "hello"
   ·                             ───┬───
   ·                                ╰── expected `Duration`, found `string`
 9 │     fmt.Println(d)
   ╰────
  help: Change this expression to produce `Duration`, or change the expected
        type
