tests/snapshots/single__fail__interface_not_satisfied.snap
---
source: tests/single.rs
expression: result.unwrap_err()
---
Error: soppo::type_mismatch

  × Mismatched types
    ╭─[interface_not_satisfied.sop:12:22]
 11 │ func main() {
 12 │     var s Stringer = MyInt(42)
    ·                      ────┬────
    ·                          ╰── expected `Stringer`, found `MyInt`
 13 │     _ = s
    ╰────
  help: Change this expression to produce `Stringer`, or change the expected
        type
